<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="result" translatable="false">Result : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add" translatable="false">Add</string>
    <string name="sub" translatable="false">Subtract</string>
    <string name="mul" translatable="false">Multiply</string>
    <string name="div" translatable="false">Divide</string>
    <string name="logn" translatable="false">Ln</string>
    <string name="log" translatable="false">Log</string>
    <string name="basic">Basic</string>
    <string name="sci">Scientific</string>
    <string name="setting" translatable="false">Color Settings</string>
    <string name="cyan_button">Cyan Button</string>
    <string name="green_button">Green Button</string>
    <string name="red_button">Red Button</string>
</resources>
