<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/nav_footer_margin"
            android:layout_marginStart="@dimen/nav_footer_margin"
            android:layout_marginBottom="@dimen/fab_margin">

            <ImageButton
                android:id="@+id/button_red"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:background="@drawable/round_button_red"
                android:contentDescription="@string/red_button"
                />

            <ImageButton
                android:id="@+id/button_green"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:background="@drawable/round_button_green"
                android:layout_marginLeft="@dimen/text_size"
                android:layout_marginStart="@dimen/text_size"
                android:contentDescription="@string/green_button"/>

            <ImageButton
                android:id="@+id/button_cyan"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:background="@drawable/round_button_cyan"
                android:layout_marginLeft="@dimen/text_size"
                android:layout_marginStart="@dimen/text_size"
                android:contentDescription="@string/cyan_button"/>
        </LinearLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
